--- a/src/app/pages/client/home-page/home-page.component.html
+++ b/src/app/pages/client/home-page/home-page.component.html
@@ -1,12 +1,12 @@
 <app-banner></app-banner>
 
-<app-special-products></app-special-products>
+<app-special-products [products]="products"></app-special-products>
 
-<app-featured-products></app-featured-products>
+<app-featured-products [products]="products"></app-featured-products>
 
 <app-gallery-sales></app-gallery-sales>
 
-<app-new-arrivals-products></app-new-arrivals-products>
+<app-new-arrivals-products [products]="products"></app-new-arrivals-products>
 
 <app-blog-list-home></app-blog-list-home>
 
