--- a/src/app/pages/admin/dash-board-page/dash-board-page.component.html
+++ b/src/app/pages/admin/dash-board-page/dash-board-page.component.html
@@ -8,8 +8,9 @@
       </h3>
       <span
         class="text-2xl font-bold leading-none text-gray-900 sm:text-3xl dark:text-white"
-        >10</span
       >
+        {{ products.length }}
+      </span>
     </div>
   </div>
   <div
@@ -21,7 +22,8 @@
       </h3>
       <span
         class="text-2xl font-bold leading-none text-gray-900 sm:text-3xl dark:text-white"
-        >6</span
+      >
+        {{ categories.length }}</span
       >
     </div>
   </div>
