hotfix: Upadate name field, correct email format refs: AG9W-31

--- a/src/app/pages/client/update-user-info-page/update-user-info-page.component.html
+++ b/src/app/pages/client/update-user-info-page/update-user-info-page.component.html
@@ -5,7 +5,7 @@
     >
       <img
         alt="Pattern"
-        src="https://images.unsplash.com/photo-1605106702734-205df224ecce?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+        src="https://i.pinimg.com/originals/c7/28/58/c72858992482c70d5ec3a585eec352ed.png"
         class="absolute inset-0 h-full w-full object-cover"
       />
     </aside>
