--- a/src/app/components/client/update-user-info-form/update-user-info-form.component.html
+++ b/src/app/components/client/update-user-info-form/update-user-info-form.component.html
@@ -14,6 +14,15 @@
       class="mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 shadow-sm"
       formControlName="name"
     />
+    <div
+      class="text-red-600 mt-2 font-semibold"
+      *ngIf="
+        userForm.get('name')?.hasError('required') &&
+        (userForm.get('name')?.touched || userForm.get('name')?.dirty)
+      "
+    >
+      Tên là bắt buộc
+    </div>
   </div>
 
   <div class="col-span-6">
@@ -28,6 +37,24 @@
       class="mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 shadow-sm"
       formControlName="email"
     />
+    <div
+      class="text-red-600 mt-2 font-semibold"
+      *ngIf="
+        userForm.get('email')?.hasError('required') &&
+        (userForm.get('email')?.touched || userForm.get('email')?.dirty)
+      "
+    >
+      Email là bắt buộc
+    </div>
+    <div
+      class="text-red-600 mt-2 font-semibold"
+      *ngIf="
+        userForm.get('email')?.hasError('email') &&
+        (userForm.get('email')?.touched || userForm.get('email')?.dirty)
+      "
+    >
+      Email không đúng định dạng
+    </div>
 
     <div
       class="mt-2"
