hotfix: Upadate Ui fe-update-user-info  refs: AG9W-31

--- a/src/app/components/client/update-user-info-form/update-user-info-form.component.html
+++ b/src/app/components/client/update-user-info-form/update-user-info-form.component.html
@@ -99,7 +99,7 @@
     </div>
   </div>
 
-  <div *ngIf="showSuccessMsg" class="mt-2 w-full">
+  <div *ngIf="showSuccessMsg" class="mt-2 col-span-12">
     <span class="text-xl font-bold text-green-500"
       >Cập nhật thông tin tài khoản thành công</span
     >
